--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://achyutrimal4.github.io/portfolio",
+  "homepage": "https://achyutrimal4.github.io/portfoli`o",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
